2009-02-13 Jerome Pasquier  <rainbru@free.fr>
	* ogreGui/dialog.cpp (draw): Now handle the geometryDirty flag to
	avoid a bug when moving a dialog.

	* ogreGui/scrollpane.h : resize() implementation.
	
2009-02-12 Jerome Pasquier  <rainbru@free.fr>
	* ogreGui/messagebox.h : function initWindow() removed.

	* client/guimanager.cpp (showMessageBox) : Uses the new MessageBox.
	* ogreGui/messagebox.h : Become a subclass of Dialog.
		
2009-02-11 Jerome Pasquier  <rainbru@free.fr>
	* ogreGui/bgwindow.h : Constructor now takes a const String& argument.
	* ogreGui/dialog.h : Constructor now takes a const String& argument.

2009-02-10 Jerome Pasquier  <rainbru@free.fr>
	* ogreGui/widget.h : Constructor now takes a const Vector4& argument.
	* ogreGui/bgwindow.h : Constructor now takes a const Vector4& argument.
	* ogreGui/dialog.h : Constructor now takes a const Vector4& argument.

	* ogreGui/dialog.cpp (draw) : Now call QuadRenderer::reset().

2009-02-05 Jerome Pasquier  <rainbru@free.fr>
	* ogreGui/bgwindow.cpp (resize) : Added support for NULL pointer
	for ResizeGrip and TitleBar.
	
	* ogreGui/dialog.cpp : Changing constructor from OWT_MOVE to
	OWT_RESIZE_AND_MOVE to test if the segfault is due to a spurious
	ResizeGrip pointer. It is not the solution.
	
2009-02-02 Jerome Pasquier  <rainbru@free.fr>
	* client/guimanager.cpp (showMessageBox) : Comment
	simpleDialog->show() for test purpose.
	
2009-02-01 Jerome Pasquier  <rainbru@free.fr>
	* ogreGui/scrollpane.cpp (draw): Added assertion to test
	NULL DrawingDevList pointer;

	* ogreGui/quadrenderer.cpp (begin): Retrieve a new RenderSystem
	pointer from OgreRoot if the one we have is spurious.

	* maincore/gameengine.cpp : Added some assertions.
	
	* ogreGui/quadrenderer.cpp : Added the mCreatorName member and its
	initializer in the constructor. It is a debugging member only.
	
2009-01-30 Jerome Pasquier  <rainbru@free.fr>
	* ogreGui/quadrenderer.cpp (debug) : Fixed a segfault that occurs