@@ -5,6 +5,10 @@ o [Carine] cross-compilation to win32
 - Fixing client executable size (310Mo) (see and update doc_cross_compil)
 
 o [mouse] OgreGui : GUI over Ogre3D based on QuadRenderer
+- Tooltip background bug : The top pos of the tooltip background is
+   cut if the MultiColumnList is moved to bottom. 
+- MCL's contextual menu doesn't work anymore
+- Tooltip doesn't disappear if we aren't in the window anymore
 - gsServerList uses OgreGUI (with MulticolumnList)
 - Error message label is not correctly placed in fullscreen mode
 
@@ -102,56 +106,5 @@ A system that serialize widgets position and configuration
    Libraries versionning in doc/libVersionning.html and configure.in
 
 * v 0.0.5-191 (15 feb 2009 - ???)
-
-* v 0.0.5-190 (30 jan 2009 - 15 feb 2009)
-- Homepage news added :
-  Title: Segfault fixed and crew update              2009-02-15 15:13:21
-  Content: I finally fix a critical segmentation fault that occurred
-   when a dialog was about to be drawn : it was a design error.
-
-   I have to welcome Carine in the crew. She is now the official maintainer
-   of the win32 port of the client. To contact her, please use the
-   SourceForge email address (cchum at users.sourceforge.net)
-
-   I will soon release the 0.0.6 version, probably in the next weeks, when
-   OgreGui, my custom Graphic User Interface will be finished.
-- Fix a bug when moving a dialog in Dialog::draw()
-- ScrollPane::resize() implementation
-- RbMessageBox now inherits Dialog (closes bug 26)
-- Updated doc/doc_bug26.h with he Dialog code
-- gsConnection test bug26 with a Dialog : works
-- Dialog and Window now take a const String& argument
-- Dialog, Window and Widget now take a const Vector4& argument
-- Trying the Dialog OWT_MOVE argument (no)
-- Updated documentation of bug26 (creation vs drawing)
-- Comment MessageBox::show() in guimanager shows a spurious mouseptr
-- Added some images to the latex documentation (was only for html)
-- Fix a RenderSystem pointer error in QuadRenderer::begin()
-- Closed bug 27
-- Added a sequence diagram to the bug26 related page
-- Fix a segfault in QuadRenderer::debug()
-- QuadRenderer::debug() now log state
-- Improved documentation for ogreGui/RenderQueueListener
-
-* v 0.0.5-189 (08 jan 2009 - 30 jan 2009)
-- Updated documentation for bug26
-- QuadRenderer state implemented
-- Removed an injectMouse call in gsMenuBase to prevent a segfault
-- Added an assert in bggui::handleWindowsEvents for a segfault
-- Added an assertion in GUI::getMousePointer()
-- Trying to avoid a segfault in ogreGui/MousePointer but failed
-- RB_CHECK_LIBCURL now support cross-compilation
-- Fix a segfault when running unit tests
-- Removed a std::cout call in common/
-   xmlbonusfile.cpp, xmlbonusfilelist.cpp, xmlattributelist.cpp,
-   xmlattrbcatlist.cpp, xmlaccountlist.cpp
-- Doxyfile now uses relative paths
-- Removed a std::cout call in common/xmlpersolist.cpp
-- Avoid some segfaults in the curlAccountToggleBlackList unit tests
-- Add some constructor initializer in xmlAccountList
-- Fix some doc/doc.h errors due to an inexisting #endif
-- Changing Copyright date for common/*, adminsite/*
-- Fix some Foobar error IrrClient/*.cpp
-- Fix errors in server and editor Makefile.am due to MOC files
-- Fix some Foobar error in IrrClient/*.h
-
+- (2) Fix a bug when drawing ToolTips
+- Reopens bug 27 and set gdb output in detail page
