@@ -28,12 +28,12 @@
          always correctly drawn.</td>
        <td>-</td>
      </tr>
-     <tr class="bugList2" >
+     <tr class="bugList2-unsolved" >
        <td>27</td>
        <td>Lin/???</td>
        <td>LocalTest emit a SegFault on OgreCamera. This bug has its
        own <a href="bug27_details.html">details page</a>.</td>
-       <td>Closed</td>
+       <td>-</td>
      </tr>
      <tr class="bugList1" >
        <td>26</td>
@@ -41,7 +41,7 @@
        <td>When trying to open a MessageBox, a segfault occurs. Trying with
        bad username/password in the Connection window. This bug has its
        own <a href="bug26_details.html">details page</a>.</td>
-       <td>Closed</td>
+       <td>Fixed</td>
      </tr>
      <tr class="bugList2" >
        <td>25</td>
@@ -130,7 +130,7 @@
        <td>14</td>
        <td>Lin/???</td>
        <td>The TerminalApp shortcuts (ALT+?) are not accessible in a
-           non-x xonsole. It exits the program. gdb tells that the
+           non-x console. It exits the program. gdb tells that the
            programm exits normally.
       </td>
        <td>-</td>
@@ -260,5 +260,5 @@
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Fri Feb 13 15:30:15 CET 2009 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Mon Feb 16 15:58:50 CET 2009 <!-- hhmts end -->
 </body> </html>
