@@ -29,20 +29,33 @@
      </tr>
      
 <!-- Add here a version when it is finished (when switching to Ver++) -->
-
      <tr class="regTest1">
-       <td>v 0.0.5-189</td>                       <!-- Version -->
-       <td>30 jan 2008</td>                       <!-- Date -->
-       <td align="right">60&nbsp;098</td>         <!-- SLOC -->
+       <td>v 0.0.5-190</td>                       <!-- Version -->
+       <td>15 feb 2008</td>                       <!-- Date -->
+       <td align="right">62&nbsp;648</td>         <!-- SLOC -->
        <td align="right">13</td>                  <!-- Console count -->
        <td>220</td>                               <!-- Unit tests -->
        <td>OK</td>                                <!-- Linux -->
        <td><font color="red">No</font></td>       <!-- Win32 -->
        <td>-</td>                                 <!-- Mem on win32 -->
-       <td>2286</td>                              <!-- Doc pages -->
-       <td>75/td>                                 <!-- ChangeLog lines -->
-       <td>Searching for a fix for bug 26.</td>   <!-- Comment -->
-       <td>NC&nbsp;<A NAME="UpNote009" HREF="#Note009">9</A></td>                            <!-- Unit tests result -->
+       <td>2353</td>                              <!-- Doc pages -->
+       <td>131</td>                               <!-- ChangeLog lines -->
+       <td>Fixed bug 26.</td>                     <!-- Comment -->
+       <td>NC</td>                                <!-- Unit tests result -->
+     </tr>
+     <tr class="regTest2">
+       <td>v 0.0.5-189</td>
+       <td>30 jan 2008</td>
+       <td align="right">60&nbsp;098</td>
+       <td align="right">13</td>
+       <td>220</td>
+       <td>OK</td>
+       <td><font color="red">No</font></td>
+       <td>-</td>
+       <td>2286</td>
+       <td>75</td>
+       <td>Searching for a fix for bug 26.</td>
+       <td>NC&nbsp;<A NAME="UpNote009" HREF="#Note009">9</A></td>
      </tr>
      <tr class="regTest1">
        <td>v 0.0.5-188</td>
@@ -610,10 +623,10 @@
 
    <A NAME="Note009"></A>9. The unit tests fail in debug mode because the 
      administration site is not yet installed on my local machine. Some
-     segfault occured due to this lack but they are now fixed.
+     segfault occurred due to this lack but they are now fixed.
      <A HREF="#UpNote009">Up</a><br>
    <hr>
 
      
-<!-- hhmts start -->Last modified: Mon Nov  3 11:16:49 CET 2008 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sun Feb 15 18:02:27 CET 2009 <!-- hhmts end -->
 </body> </html>
