@@ -1,3 +1,6 @@
+2009-02-16 Jerome Pasquier  <rainbru@free.fr>
+	* ogreGui/sobetagui.cpp (drawToolTip): Fix a bug when drawing tootip.
+
 2009-02-13 Jerome Pasquier  <rainbru@free.fr>
 	* ogreGui/dialog.cpp (draw): Now handle the geometryDirty flag to
 	avoid a bug when moving a dialog.
